fix: display on small screen sizes

--- a/src/components/BlockChain/BlocksView/BlocksView.module.css
+++ b/src/components/BlockChain/BlocksView/BlocksView.module.css
@@ -3,7 +3,7 @@
   flex: 2;
   height: calc(100vh - 64px);
   background-color: #efefef;
-  min-width: 500px;
+  min-width: 300px;
   overflow-y: scroll;
   scroll-behavior: smooth;
   scrollbar-color: #001529 transparent;
