--- a/src/components/BlockChain/Transactions/transactions.module.css
+++ b/src/components/BlockChain/Transactions/transactions.module.css
@@ -1,19 +1,22 @@
 .container {
-  min-width: 320px;
-  max-width: 600px;
+  min-width: 350px;
   height: calc(100vh - 64px);
   background-color: #0d1929;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  resize: horizontal;
-  overflow: auto;
 }
 
 .container h1 {
   margin: 20px;
   color: white;
+}
+
+@media screen and (max-width: 750px) {
+  .container {
+    min-width: 100%;
+  }
 }
 
 .transactions-list {
